force-app/main/default/objects/Hazard_Region__mdt/Hazard_Region__mdt.object-meta.xml
<CustomObject>
    <description>Monitored geographic bounding boxes across continents used to scope hazard ingest callouts.</description>
    <label>Hazard Region</label>
    <pluralLabel>Hazard Regions</pluralLabel>
</CustomObject>