force-app/main/default/objects/Hazard_Region__mdt/fields/Max_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Max_Latitude__c</fullName>
    <label>Max Latitude</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>