force-app/main/default/objects/Hazard_Region__mdt/fields/Max_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Max_Longitude__c</fullName>
    <label>Max Longitude</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>