force-app/main/default/objects/Hazard_Region__mdt/fields/Min_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Min_Longitude__c</fullName>
    <label>Min Longitude</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>