force-app/main/default/objects/Hazard_Region__mdt/fields/Min_Magnitude__c.field-meta.xml
<CustomField>
    <fullName>Min_Magnitude__c</fullName>
    <description>Minimum earthquake magnitude to query for this region.</description>
    <label>Min Magnitude</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>