force-app/main/default/objects/Hazard_Region__mdt/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <label>Region Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>